--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -6,36 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 
 <body>
     <header>
-        <h1>Juan De La Torre Freelancer</h1>
+        <h1 class="titulo">Javier Bahena <span>Freelancer</span></h1>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
-    <section>
-        <h2>Diseño y Desarrollo Web Freelancer</h2>
+    <section class="hero">
+        <div class="contenido-hero">
+            <h2 class="titulo">Diseño y Desarrollo Web <span>Freelancer</span></h2>
 
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <circle cx="12" cy="11" r="3" />
-            <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-        </svg>
 
-        <p>Toluca, Méx.</p>
-        <a href="#">Contactar</a>
+            <div class="ubicacion">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88"
+                    height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <circle cx="12" cy="11" r="3" />
+                    <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                </svg>
+                <p>Toluca, Méx.</p>
+            </div>
+
+            <a class="boton" href="#">Contactar</a>
+        </div> <!--Contenido Hero-->
     </section>
 
-    <main>
+    <main class="contenedor sombra">
         <h2>Mis Servicios</h2>
 
         <section>
@@ -107,20 +118,27 @@
 
             <fieldset>
                 <legend>Contactame llenando todos los campos</legend>
+                <div>
+                    <label>Nombre</label>
+                    <input type="text" placeholder="Tu nombre">
+                </div>
 
-                <label>Nombre</label>
-                <input type="text" placeholder="Tu nombre">
+                <div>
+                    <label>Télefono</label>
+                    <input type="tel" placeholder="Tu télefono">
+                </div>
 
-                <label>Télefono</label>
-                <input type="tel" placeholder="Tu télefono">
-
-                <label>Correo</label>
-                <input type="email" placeholder="Tu correo favorito">
-
-                <label>Mensaje</label>
-                <textarea></textarea>
-
-                <input type="submit" value="Enviar">
+                <div>
+                    <label>Correo</label>
+                    <input type="email" placeholder="Tu correo favorito">
+                </div>
+                <div>
+                    <label>Mensaje</label>
+                    <textarea></textarea>
+                </div>
+                <div>
+                    <input type="submit" value="Enviar">
+                </div>
             </fieldset>
 
         </form>
